--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,11 +8,11 @@ add_subdirectory (Backend)
 aux_source_directory(. DIR_SRCS)
 # aux_source_directory(SysY_Lex DIR_SRCS)
 
-add_executable(Test ${DIR_SRCS})
+add_executable(compiler ${DIR_SRCS})
 
-target_link_libraries(Test SysY_Lex)
-target_link_libraries(Test SysY_Yacc)
-target_link_libraries(Test AST2IR)
-target_link_libraries(Test IR2ASM)
+target_link_libraries(compiler SysY_Lex)
+target_link_libraries(compiler SysY_Yacc)
+target_link_libraries(compiler AST2IR)
+target_link_libraries(compiler IR2ASM)
 
 include_directories(${PROJECT_SOURCE_DIR}/include)
